--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,3 +96,15 @@ body {
 .activity:hover .remove-activity {
   opacity: 1;
 }
+
+.reply .avatar::before {
+  content: "";
+  width: 15px;
+  height: 180px;
+  position: absolute;
+  left: -17px;
+  border-left: 2px solid #444;
+  border-bottom: 2px solid #444;
+  border-radius: 0 0 0 10px;
+  bottom: calc(50% - 3px);
+}
